# imzi-engine

./: .clangd  .gitignore  CMakeLists.txt  README.md  asan_suppressions.txt  build.zig  build.zig.zon  compile_commands.json  generate_compile_commands.py  m
include/core/: imzi.h
include/core/graphics/: texture.h
include/engine/: engine.h  entity.h  renderer.h  scene.h
include/engine/managers/: asset_manager_2d.h
include/engine/players/: animation_player.h
include/engine/visuals/: animation.h  render.h  sprite.h  sprite_sheet.h  tilemap.h
include/game/: game.h
include/game/primitives/: background_entity.h  projectile_entity.h  tilemap_entity.h
include/game/scenes/: render_test_scene.h  test_scene.h
include/game/scenes/entities/: player_entity.h  test_enemy_entity.h  test_entities.h  test_render_entitiy.h
include/glad/: glad.h
src/: glad.c  main.c
src/core/: imzi.c
src/engine/: engine.c  renderer.c  scene.c
src/engine/managers/: asset_manager_2d.c
src/engine/players/: animation_player.c
src/engine/visuals/: sprite_sheet.c  tilemap.c
src/game/: game.c
src/game/primitives/: background_entity.c  projectile_entity.c  tilemap_entity.c
src/game/scenes/: render_test_scene.c  test_scene.c
src/game/scenes/entities/: player_entity.c  test_enemy_entity.c  test_entities.c  test_render_entity.c
vendors/SDL3/lib/: libSDL3.so.0.3.0
vendors/SDL3_image/lib/: libSDL3_image.so.0.3.0
